--- a/index.html
+++ b/index.html
@@ -40,9 +40,19 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="#">Tv Shows</a>
               </li>
-              <li class="nav-item dropdown">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Movies</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Recently Added</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">My List</a>
+              </li>
+            </ul>
+            <!-- <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle"
                   href="#"
@@ -64,8 +74,8 @@
               <li class="nav-item">
                 <a class="nav-link disabled" aria-disabled="true">Disabled</a>
               </li>
-            </ul>
-            <form class="d-flex" role="search">
+            </ul> -->
+            <!-- <form class="d-flex" role="search">
               <input
                 class="form-control me-2"
                 type="search"
@@ -75,7 +85,7 @@
               <button class="btn btn-outline-success" type="submit">
                 Search
               </button>
-            </form>
+            </form> -->
           </div>
         </div>
       </nav>
@@ -406,6 +416,48 @@
         </button>
       </div>
     </div>
+
+    <footer class="container-fluid opacity-50">
+      <div class="container-fluid p-0">
+        <div class="d-flex gap-2">
+          <i class="bi bi-facebook footIcon"></i>
+          <i class="bi bi-instagram footIcon"></i>
+          <i class="bi bi-twitter footIcon"></i>
+          <i class="bi bi-youtube footIcon"></i>
+        </div>
+        <div class="container-fluid p-0">
+          <p><a href="javascript:void(0)">Audio and Subtitles</a></p>
+          <p><a href="javascript:void(0)">Media Center</a></p>
+          <p><a href="javascript:void(0)">Privacy</a></p>
+          <p class="mb-4"><a href="javascript:void(0)">Contact Us</a></p>
+          <p class="serviceBtn mb-4">
+            <a href="javascript:void(0)">Service Code</a>
+          </p>
+
+          <p>
+            <a href="javascript:void(0)">&copy; 1997-2021 Netflix Inc</a>
+          </p>
+        </div>
+      </div>
+
+      <div class="container-fluid p-0">
+        <p><a href="javascript:void(0)">Audio Description</a></p>
+        <p><a href="javascript:void(0)">Investor Relations</a></p>
+        <p><a href="javascript:void(0)">Legal Notices</a></p>
+      </div>
+
+      <div class="container-fluid p-0">
+        <p><a href="javascript:void(0)">Help Center</a></p>
+        <p><a href="javascript:void(0)">Jobs</a></p>
+        <p><a href="javascript:void(0)">Cookie Preferences</a></p>
+      </div>
+
+      <div class="container-fluid p-0">
+        <p><a href="javascript:void(0)">Gift Cards</a></p>
+        <p><a href="javascript:void(0)">Terms Of Use</a></p>
+        <p><a href="javascript:void(0)">Corporate Information</a></p>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
