--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             class="form-select"
             aria-label="Default select example"
           >
-            <option selected>Genres</option>
+            <option class="genresOption" selected>Genres</option>
             <option value="1">Genres</option>
             <option value="2">Two</option>
             <option value="3">Three</option>
