--- a/index.html
+++ b/index.html
@@ -437,9 +437,11 @@
         </div>
       </div>
 
-      <footer class="container-fluid opacity-50">
+      <footer
+        class="container-fluid d-flex flex-column flex-md-row justify-content-between opacity-50"
+      >
         <div class="container-fluid p-0">
-          <div class="d-flex gap-2">
+          <div class="d-flex gap-2 gap-md-3">
             <i class="bi bi-facebook footIcon"></i>
             <i class="bi bi-instagram footIcon"></i>
             <i class="bi bi-twitter footIcon"></i>
