--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
               aria-label="Default select example"
             >
               <option class="genresOption" selected>Genres</option>
-              <option value="1">Genres</option>
-              <option value="2">Two</option>
-              <option value="3">Three</option>
+              <option value="1">Comedy</option>
+              <option value="2">Reality</option>
+              <option value="3">Thriller</option>
             </select>
           </div>
           <div
