--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               </button>
             </form> -->
               <div>
-                <div class="d-flex justify-content-center gap-3">
+                <div class="d-flex justify-content-lg-center gap-3">
                   <i class="bi bi-search align-self-center"></i>
                   <p class="pKids align-self-center">KIDS</p>
                   <i class="bi bi-bell-fill align-self-center"></i>
@@ -98,9 +98,33 @@
                     src="assets/img/avatar.png"
                     class="navAvatarImg align-self-center"
                   />
-                  <i
-                    class="bi bi-caret-down-fill align-self-center avatarArrow"
-                  ></i>
+                  <div class="dropdown">
+                    <button
+                      class="btn btn-dark border-0 bg-transparent dropdown-toggle"
+                      type="button"
+                      data-bs-toggle="dropdown"
+                      aria-expanded="false"
+                    >
+                      &nbsp;
+                    </button>
+                    <ul class="dropdown-menu dropdown-menu-dark bg-dark">
+                      <li>
+                        <a class="dropdown-item active" href="#">Action</a>
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="#">Another action</a>
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="#"
+                          >Something else here</a
+                        >
+                      </li>
+                      <li><hr class="dropdown-divider" /></li>
+                      <li>
+                        <a class="dropdown-item" href="#">Separated link</a>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
               </div>
             </div>
