--- a/profile.html
+++ b/profile.html
@@ -95,29 +95,19 @@
                   src="assets/img/avatar.png"
                   class="navAvatarImg align-self-center"
                 />
-                <div class="dropdown">
+                <div class="btn-group dropstart">
                   <button
-                    class="btn btn-dark border-0 bg-transparent dropdown-toggle"
                     type="button"
+                    class="btn btn-secondary bg-transparent dropdown-toggle"
                     data-bs-toggle="dropdown"
                     aria-expanded="false"
                   >
-                    &nbsp;
+                    <i class="bi bi-caret-down-fill"></i>
                   </button>
-                  <ul class="dropdown-menu dropdown-menu-dark bg-dark">
-                    <li>
-                      <a class="dropdown-item active" href="#">Action</a>
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="#">Another action</a>
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="#">Something else here</a>
-                    </li>
-                    <li><hr class="dropdown-divider" /></li>
-                    <li>
-                      <a class="dropdown-item" href="#">Separated link</a>
-                    </li>
+                  <ul class="dropdown-menu dropdown-menu-dark">
+                    <li><a class="dropdown-item" href="#">Menu item</a></li>
+                    <li><a class="dropdown-item" href="#">Menu item</a></li>
+                    <li><a class="dropdown-item" href="#">Menu item</a></li>
                   </ul>
                 </div>
               </div>
