--- a/profile.html
+++ b/profile.html
@@ -95,7 +95,7 @@
                   src="assets/img/avatar.png"
                   class="navAvatarImg align-self-center"
                 />
-                <div class="btn-group dropstart">
+                <div class="btn-group dropdown">
                   <button
                     type="button"
                     class="btn btn-secondary bg-transparent dropdown-toggle"
