--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <header class="mb-5">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <div class="container-fluid">
@@ -98,30 +98,35 @@
                     src="assets/img/avatar.png"
                     class="navAvatarImg align-self-center"
                   />
-                  <div class="dropdown">
+                  <div class="btn-group dropdown">
                     <button
-                      class="btn btn-dark border-0 bg-transparent dropdown-toggle"
                       type="button"
+                      class="btn btn-secondary bg-transparent dropdown-toggle bg-dark border-0"
                       data-bs-toggle="dropdown"
                       aria-expanded="false"
                     >
-                      &nbsp;
+                      <i class="bi bi-caret-down-fill"></i>
                     </button>
-                    <ul class="dropdown-menu dropdown-menu-dark bg-dark">
+                    <ul
+                      class="dropdown-menu dropdown-menu-dark bg-dark text-white"
+                    >
                       <li>
-                        <a class="dropdown-item active" href="#">Action</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="#">Another action</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="#"
-                          >Something else here</a
+                        <a class="dropdown-item" href="profile.html"
+                          >Utente #1</a
                         >
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="profile.html"
+                          >Manage profiles</a
+                        >
+                      </li>
+                      <li><a class="dropdown-item" href="#">Account</a></li>
+                      <li>
+                        <a class="dropdown-item" href="#">Help Center</a>
                       </li>
                       <li><hr class="dropdown-divider" /></li>
                       <li>
-                        <a class="dropdown-item" href="#">Separated link</a>
+                        <a class="dropdown-item" href="#">Signout Netflix</a>
                       </li>
                     </ul>
                   </div>
@@ -130,34 +135,37 @@
             </div>
           </div>
         </nav>
-
-        <div
-          id="header2"
-          class="container-fluid d-flex justify-content-between"
-        >
-          <div id="tvTitleAndSelect" class="d-flex gap-3 w-100">
-            <h2 class="align-self-center">TV Shows</h2>
-            <select
-              id="headSelect"
-              class="form-select"
-              aria-label="Default select example"
-            >
-              <option class="genresOption" selected>Genres</option>
-              <option value="1">Comedy</option>
-              <option value="2">Reality</option>
-              <option value="3">Thriller</option>
-            </select>
-          </div>
+        <div class="container">
           <div
-            class="d-flex align-items-center justify-content-center"
-            id="headBtns"
+            id="header2"
+            class="container-fluid d-flex justify-content-between"
           >
-            <i class="bi bi-text-left"></i>
-            <i class="bi bi-border-all"></i>
+            <div id="tvTitleAndSelect" class="d-flex gap-3 w-100">
+              <h2 class="align-self-center">TV Shows</h2>
+              <select
+                id="headSelect"
+                class="form-select"
+                aria-label="Default select example"
+              >
+                <option class="genresOption" selected>Genres</option>
+                <option value="1">Comedy</option>
+                <option value="2">Reality</option>
+                <option value="3">Thriller</option>
+              </select>
+            </div>
+            <div
+              class="d-flex align-items-center justify-content-center"
+              id="headBtns"
+            >
+              <i class="bi bi-text-left"></i>
+              <i class="bi bi-border-all"></i>
+            </div>
           </div>
         </div>
       </header>
+    </div>
 
+    <div class="container">
       <div class="container-fluid mb-3">
         <h4>Trending Now</h4>
       </div>
@@ -504,11 +512,12 @@
           <p><a href="javascript:void(0)">Corporate Information</a></p>
         </div>
       </footer>
-      <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"
-      ></script>
     </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
