--- a/profile.html
+++ b/profile.html
@@ -20,7 +20,7 @@
     <header class="mb-5">
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"
+          <a class="navbar-brand" href="index.html"
             ><img id="imgLogo" src="assets/img/netflix_logo.png"
           /></a>
           <button
