--- a/profile.html
+++ b/profile.html
@@ -166,17 +166,11 @@
           <div>
             <p class="mb-3">Autoplay controls</p>
             <div class="d-flex gap-1 mb-1">
-              <div>
-                <label class="container" for="checkboxFirstPage">
-                  <input
-                    type="checkbox"
-                    name="checkboxFirstPage"
-                    required
-                    id="checkboxFirstPage"
-                  /><span class="checkmark"></span>Autoplay next episode in a
-                  series on all devices.
-                </label>
-              </div>
+              <input type="checkbox" id="check2" />
+
+              <label for="check2"
+                >Autoplay previews while browsing on all devices.</label
+              >
             </div>
             <div class="d-flex gap-1">
               <input type="checkbox" id="check2" />
