--- a/index.html
+++ b/index.html
@@ -112,7 +112,10 @@
                     >
                       <li>
                         <a class="dropdown-item" href="profile.html"
-                          >Utente #1</a
+                          ><img
+                            src="assets/img/avatar.png"
+                            class="navAvatarImg"
+                          />&nbsp; &nbsp; Utente #1</a
                         >
                       </li>
                       <li>
