--- a/profile.html
+++ b/profile.html
@@ -108,7 +108,12 @@
                     class="dropdown-menu dropdown-menu-dark bg-dark text-white"
                   >
                     <li>
-                      <a class="dropdown-item" href="profile.html">Utente #1</a>
+                      <a class="dropdown-item" href="profile.html"
+                        ><img
+                          src="assets/img/avatar.png"
+                          class="navAvatarImg"
+                        />&nbsp; &nbsp; Utente #1</a
+                      >
                     </li>
                     <li>
                       <a class="dropdown-item" href="profile.html"
