--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <div class="container-fluid">
+    <div class="container-fluid p-0">
       <header class="mb-5">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <div class="container-fluid">
