--- a/settings.html
+++ b/settings.html
@@ -143,9 +143,13 @@
 
     <div class="container-fluid" id="mainSettings">
       <div class="container">
-        <div>
-          <h2>Account</h2>
-          <hr />
+        <div class="container">
+          <div class="row">
+            <h2 class="col-12">Account</h2>
+          </div>
+          <div class="row">
+            <hr class="col-12" />
+          </div>
         </div>
         <div class="row">
           <div class="col-4 memberShip">
@@ -157,21 +161,27 @@
             <div class="container">
               <div class="row">
                 <p class="col-6">student@strive.school</p>
-                <a class="col-6 text-end">Change account email</a>
+                <a class="col-6 text-end text-decoration-none"
+                  >Change account email</a
+                >
               </div>
             </div>
 
             <div class="container">
               <div class="row">
                 <p class="col-6">Password: ******</p>
-                <a class="col-6 text-end"> Change password</a>
+                <a class="col-6 text-end text-decoration-none">
+                  Change password</a
+                >
               </div>
             </div>
 
             <div class="container">
               <div class="row">
                 <p class="col-6">Phone: 123 123 123</p>
-                <a class="col-6 text-end">Change phone number</a>
+                <a class="col-6 text-end text-decoration-none"
+                  >Change phone number</a
+                >
               </div>
             </div>
 
@@ -180,6 +190,67 @@
                 <hr class="col-12" />
               </div>
             </div>
+
+            <div class="container">
+              <div class="row">
+                <p class="col-6">
+                  <i class="bi bi-paypal text-black"></i> admin@strive.school
+                </p>
+
+                <a class="col-6 text-end text-decoration-none"
+                  >Update payment info</a
+                >
+              </div>
+              <div class="row">
+                <a class="col-12 text-end text-decoration-none">
+                  Billing details</a
+                >
+              </div>
+            </div>
+
+            <div class="container">
+              <div class="row">
+                <hr class="col-12" />
+              </div>
+            </div>
+
+            <div class="container">
+              <div class="row">
+                <a class="col-12 text-end text-decoration-none"
+                  >Redeem gift card or promo code</a
+                >
+              </div>
+            </div>
+
+            <div class="container">
+              <div class="row">
+                <a class="col-12 text-end text-decoration-none"
+                  >Where to buy gift cards</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="row">
+            <hr class="col-12" />
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-4">
+            <p>PLAN DETAILS</p>
+          </div>
+          <div class="col-4">
+            <p class="text-black">
+              Premium
+              <span class="border border-black border-1 text-black px-1"
+                >ULTRA <i class="bi bi-badge-hd text-black"></i
+              ></span>
+            </p>
+          </div>
+          <div class="col-4 text-end">
+            <a>Change plan</a>
           </div>
         </div>
       </div>
