--- a/settings.html
+++ b/settings.html
@@ -15,6 +15,12 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
     <link rel="stylesheet" href="assets/css/style.css" />
+    <style>
+      html,
+      body {
+        background-color: #f3f3f3 !important;
+      }
+    </style>
   </head>
   <body>
     <div class="container-fluid p-0">
@@ -251,6 +257,76 @@
           </div>
           <div class="col-4 text-end">
             <a>Change plan</a>
+          </div>
+        </div>
+
+        <div class="container">
+          <div class="row">
+            <hr class="col-12" />
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-4">
+            <p>SETTINGS</p>
+          </div>
+          <div class="col-8 p-0">
+            <a class="d-block text-decoration-none">Parental controls</a>
+            <a class="d-block text-decoration-none">Test participation</a>
+            <a class="d-block text-decoration-none">Manage download devices</a>
+            <a class="d-block text-decoration-none">Activate a device</a>
+            <a class="d-block text-decoration-none"
+              >Recent device streaming activity</a
+            >
+            <a class="d-block text-decoration-none">Sign out of all devices</a>
+          </div>
+        </div>
+
+        <div class="container">
+          <div class="row">
+            <hr class="col-12" />
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-4">
+            <p>MY PROFILE</p>
+          </div>
+          <div class="col-4">
+            <p>
+              <img src="assets/img/avatar.png" class="navAvatarImg" />Utente
+            </p>
+          </div>
+          <div class="col-4 text-end">
+            <a class="text-decoration-none">Manage profiles</a>
+            <a class="d-block text-decoration-none">Add profile email</a>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-4"></div>
+          <div class="col-4">
+            <a>Language</a>
+          </div>
+          <div class="col-4">
+            <a>Viewing activity</a>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-4"></div>
+          <div class="col-4">
+            <a>Playback settings</a>
+          </div>
+          <div class="col-4">
+            <a>Ratings</a>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-4"></div>
+          <div class="col-4">
+            <a>Subtitle appearance</a>
           </div>
         </div>
       </div>
