--- a/settings.html
+++ b/settings.html
@@ -157,13 +157,13 @@
             <hr class="col-12" />
           </div>
         </div>
-        <div class="row flex-column flex-md-row">
-          <div class="col-12 col-md-4 memberShip">
+        <div class="d-flex flex-column flex-md-row">
+          <div>
             <p>MEMBERSHIP & BILLING</p>
             <p class="btn btn-secondary">Cancel Membership</p>
           </div>
 
-          <div class="col-12 col-md-8">
+          <div>
             <div class="container">
               <div class="row">
                 <p class="col-6">student@strive.school</p>
